--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">scheduling</string>
+    <string name="app_name">Scheduling</string>
+    <string name="phone">Phone:</string>
+    <string name="address">Address:</string>
+    <string name="professionals">Professionals</string>
 </resources>
