--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="user_greeting">Hello there, do the sign in and schedule a professional easily!</string>
     <string name="user_logged">Hello %s!</string>
     <string name="loading">Loading…</string>
+    <string name="title_widget_today">Today Schedule</string>
+
+    <string name="empty_schedule_list">You have to login to see your schedule!</string>
 </resources>
